cambios en body

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <title>CV - Arnolfo Emanuel</title>
 </head>
 <body>
-    
+    <div class="d-flez">
+        <div class="sidebar-container" class="bg-primary">
+            <div class="logo">
+                <h4>Imagen</h4>
+            </div>
+            <div class="menu">
+                <h4>Perfil</h4>
+                <h4>Contacto</h4>
+                <h4>Idioma</h4>
+            </div>
+        </div>
+    </div>
+
 
     <script src="/js/main.js" charset="utf-8"></script>
      
