class felx y min-height

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>CV - Arnolfo Emanuel</title>
 </head>
 <body>
-    <div class="d-flez">
-        <div class="sidebar-container" class="bg-primary">
+    <div class="d-flex">
+        <div id="sidebar-container" class="bg-primary">
             <div class="logo">
                 <h4>Imagen</h4>
             </div>
