--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="container text-center">
-        <div class="row align-items-center">
+        <div id="max" class="row align-items-star">
             <div class="col-4">
                 <h4 class="titulo">CONTACTO</h4>
                 <h4 class="titulo">PERFIL</h4>
