--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>CV - Arnolfo Emanuel</title>
 </head>
 <body>
@@ -28,14 +29,38 @@
     <div class="container text-center">
         <div id="max" class="row align-items-star">
             <div class="col-4">
-                <h4 class="titulo">CONTACTO</h4>
-                <h4 class="titulo">PERFIL</h4>
-                <h4 class="titulo">IDIOMAS</h4>
+                <div class="panel_lateral">
+                    <h4>CONTACTO</h4>
+                    <div class="separador"></div>
+                    <!-- <lu>
+                        <li> unmail@unadominio.com</li>
+                    </lu> -->
+                    <i class="bi bi-envelope-open-fill"> correoelectronico@midominio.com</i>
+                    <i class="bi bi-telephone-fill"> (11) 1234-5678</i>
+                    <i class="bi bi-geo-alt-fill"> Calle Cualquiera 123</i>
+                    <i class="bi bi-instagram"> @mi_Instagram</i>
+                </div>
+                <div class="panel_lateral">
+                    <h4>PERFIL</h4>
+                    <dvi class="separador"></dvi>
+                    <p>Edad: 25 años</p>
+                    <p>Nacimiento: 15/01/1998</p>
+                    <p>Localidad: Rio Cuarto</p>
+                    <p>Nacionalidad: Argentina</p>
+                </div>
+                <div class="panel_lateral">
+                    <h4>IDIOMAS</h4>
+                    <dvi class="separador"></dvi>
+                    <p>Español nativo</p>
+                    <p>Inglés intermedio</p>
+                    <p>Italiano básico</p>
+                </div>
             </div>
             <div class="col">
                 <div class="row">
                     <div class="col">
                         <h4 class="titulo">EXPERIENCIA</h4>
+                        
                     </div>
                     <div class="col">
                         <h4 class="titulo">FORMACIÓN</h4>
