--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <div class="container text-center">
         <div class="row align-items-center">
             <div class="col-4">
-                <img src="/image/FotoPerfil1x1.jpg" alt="Foto de perfil" style="height: 200px;">
+                <img src="/image/FotoPerfil1x1.jpg" id="myImg" alt="Foto de perfil" style="height: 200px;">
+                <div id="myModal" class="modal">
+                    <span class="close">&times;</span>
+                    <img class="modal-content" id="img01">
+                    <div id="caption"></div>
+                  </div>
             </div>
             <div class="col" id="barra">
                 <div id="nombre">
@@ -42,15 +47,15 @@
                 </div>
                 <div class="panel_lateral">
                     <h4>PERFIL</h4>
-                    <dvi class="separador"></dvi>
-                    <p>Edad: 25 años</p>
-                    <p>Nacimiento: 15/01/1998</p>
-                    <p>Localidad: Rio Cuarto</p>
+                    <div class="separador"></div>
+                    <p>Edad: 24 años</p>
+                    <p>Nacimiento: 29/01/1999</p>
+                    <p>Localidad: Rafaela</p>
                     <p>Nacionalidad: Argentina</p>
                 </div>
                 <div class="panel_lateral">
                     <h4>IDIOMAS</h4>
-                    <dvi class="separador"></dvi>
+                    <div class="separador"></div>
                     <p>Español nativo</p>
                     <p>Inglés intermedio</p>
                     <p>Italiano básico</p>
@@ -60,10 +65,86 @@
                 <div class="row">
                     <div class="col">
                         <h4 class="titulo">EXPERIENCIA</h4>
-                        
+                        <div class="panel_lateral2">
+                            <div class="separador"></div>
+                        </div>
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <div class="centrar">Megatone</div>
+                                </button>
+                              </h2>
+                              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac mattis felis, eu ultrices lacus. Sed ac fringilla lacus, non mattis erat. Fusce posuere nulla sed mauris facilisis, in dapibus erat mollis. Pellentesque vehicula dui dictum tristique ultrices. Ut dictum ligula eget congue pulvinar. Donec tincidunt et mauris sit amet sodales. Vestibulum ex nisl, volutpat a velit vitae, finibus sagittis felis. Suspendisse molestie aliquam leo et cursus. Duis feugiat lectus sed rutrum hendrerit. Integer condimentum tortor enim, vel ultricies felis hendrerit vitae. Donec sed tincidunt enim. Maecenas lacus enim, ultricies sed justo ut, mollis interdum purus. Vestibulum elementum quis metus vitae hendrerit.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <div class="centrar">Mercado Libre</div>
+                                </button>
+                              </h2>
+                              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac mattis felis, eu ultrices lacus. Sed ac fringilla lacus, non mattis erat. Fusce posuere nulla sed mauris facilisis, in dapibus erat mollis. Pellentesque vehicula dui dictum tristique ultrices. Ut dictum ligula eget congue pulvinar. Donec tincidunt et mauris sit amet sodales. Vestibulum ex nisl, volutpat a velit vitae, finibus sagittis felis. Suspendisse molestie aliquam leo et cursus. Duis feugiat lectus sed rutrum hendrerit. Integer condimentum tortor enim, vel ultricies felis hendrerit vitae. Donec sed tincidunt enim. Maecenas lacus enim, ultricies sed justo ut, mollis interdum purus. Vestibulum elementum quis metus vitae hendrerit.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <div class="centrar">Amazon</div>
+                                </button>
+                              </h2>
+                              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac mattis felis, eu ultrices lacus. Sed ac fringilla lacus, non mattis erat. Fusce posuere nulla sed mauris facilisis, in dapibus erat mollis. Pellentesque vehicula dui dictum tristique ultrices. Ut dictum ligula eget congue pulvinar. Donec tincidunt et mauris sit amet sodales. Vestibulum ex nisl, volutpat a velit vitae, finibus sagittis felis. Suspendisse molestie aliquam leo et cursus. Duis feugiat lectus sed rutrum hendrerit. Integer condimentum tortor enim, vel ultricies felis hendrerit vitae. Donec sed tincidunt enim. Maecenas lacus enim, ultricies sed justo ut, mollis interdum purus. Vestibulum elementum quis metus vitae hendrerit.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
                     </div>
-                    <div class="col">
+                    <div class="col" id="col_der">
                         <h4 class="titulo">FORMACIÓN</h4>
+                        <div class="panel_lateral2">
+                            <div class="separador"></div>
+                            </div>
+                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                      <div class="centrar">Secundario</div>
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac mattis felis, eu ultrices lacus. Sed ac fringilla lacus, non mattis erat. Fusce posuere nulla sed mauris facilisis, in dapibus erat mollis. Pellentesque vehicula dui dictum tristique ultrices. Ut dictum ligula eget congue pulvinar. Donec tincidunt et mauris sit amet sodales. Vestibulum ex nisl, volutpat a velit vitae, finibus sagittis felis. Suspendisse molestie aliquam leo et cursus. Duis feugiat lectus sed rutrum hendrerit. Integer condimentum tortor enim, vel ultricies felis hendrerit vitae. Donec sed tincidunt enim. Maecenas lacus enim, ultricies sed justo ut, mollis interdum purus. Vestibulum elementum quis metus vitae hendrerit.</div>
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                        <div class="centrar">Universidad</div>
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac mattis felis, eu ultrices lacus. Sed ac fringilla lacus, non mattis erat. Fusce posuere nulla sed mauris facilisis, in dapibus erat mollis. Pellentesque vehicula dui dictum tristique ultrices. Ut dictum ligula eget congue pulvinar. Donec tincidunt et mauris sit amet sodales. Vestibulum ex nisl, volutpat a velit vitae, finibus sagittis felis. Suspendisse molestie aliquam leo et cursus. Duis feugiat lectus sed rutrum hendrerit. Integer condimentum tortor enim, vel ultricies felis hendrerit vitae. Donec sed tincidunt enim. Maecenas lacus enim, ultricies sed justo ut, mollis interdum purus. Vestibulum elementum quis metus vitae hendrerit.</div>
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                        <div class="centrar">Posgrado</div>
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac mattis felis, eu ultrices lacus. Sed ac fringilla lacus, non mattis erat. Fusce posuere nulla sed mauris facilisis, in dapibus erat mollis. Pellentesque vehicula dui dictum tristique ultrices. Ut dictum ligula eget congue pulvinar. Donec tincidunt et mauris sit amet sodales. Vestibulum ex nisl, volutpat a velit vitae, finibus sagittis felis. Suspendisse molestie aliquam leo et cursus. Duis feugiat lectus sed rutrum hendrerit. Integer condimentum tortor enim, vel ultricies felis hendrerit vitae. Donec sed tincidunt enim. Maecenas lacus enim, ultricies sed justo ut, mollis interdum purus. Vestibulum elementum quis metus vitae hendrerit.</div>
+                                  </div>
+                                </div>
+                              </div>                            
                     </div>
                 </div>
             </div>
