Todos los requisitos cumplidos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container text-center">
         <div class="row align-items-center">
             <div class="col-4">
-                <img src="/image/FotoPerfil1x1.jpg" id="myImg" alt="Foto de perfil" style="height: 200px;">
+                <img src="https://media.v2.siweb.es/uploaded_thumb_medium/409d16e4bfdd9d56bbcdede012883dd9/7853533_carnet_h.jpg" id="myImg" alt="Foto de perfil" style="height: 200px;">
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
