--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    
     <div class="container text-center">
         <div class="row align-items-center">
             <div class="col-4">
@@ -37,9 +36,6 @@
                 <div class="panel_lateral">
                     <h4>CONTACTO</h4>
                     <div class="separador"></div>
-                    <!-- <lu>
-                        <li> unmail@unadominio.com</li>
-                    </lu> -->
                     <i class="bi bi-envelope-open-fill"> correoelectronico@midominio.com</i>
                     <i class="bi bi-telephone-fill"> (11) 1234-5678</i>
                     <i class="bi bi-geo-alt-fill"> Calle Cualquiera 123</i>
@@ -51,7 +47,11 @@
                     <p>Edad: 24 años</p>
                     <p>Nacimiento: 29/01/1999</p>
                     <p>Localidad: Rafaela</p>
-                    <p>Nacionalidad: Argentina</p>
+                    <p>Nacionalidad: Argentinta</p>
+                    <!-- <p><strong>Edad:</strong> 24 años</p>
+                    <p><strong>Nacimiento:</strong> 29/01/1999</p>
+                    <p><strong>Localidad:</strong> Rafaela</p>
+                    <p><strong>Nacionalidad:</strong> Argentina</p> -->
                 </div>
                 <div class="panel_lateral">
                     <h4>IDIOMAS</h4>
@@ -72,7 +72,7 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    <div class="centrar">Megatone</div>
+                                    <div class="centrar">Trabajo 1</div>
                                 </button>
                               </h2>
                               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -84,7 +84,7 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    <div class="centrar">Mercado Libre</div>
+                                    <div class="centrar">Trabajo</div>
                                 </button>
                               </h2>
                               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -96,7 +96,7 @@
                             <div class="accordion-item">
                               <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    <div class="centrar">Amazon</div>
+                                    <div class="centrar">Trabajo 3</div>
                                 </button>
                               </h2>
                               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -117,7 +117,7 @@
                                 <div class="accordion-item">
                                   <h2 class="accordion-header" id="flush-headingOne">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                      <div class="centrar">Secundario</div>
+                                      <div class="centrar">Nivel Secundario</div>
                                     </button>
                                   </h2>
                                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -127,7 +127,7 @@
                                 <div class="accordion-item">
                                   <h2 class="accordion-header" id="flush-headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                        <div class="centrar">Universidad</div>
+                                        <div class="centrar">Nivel universitario</div>
                                     </button>
                                   </h2>
                                   <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
